--- a/Index.html
+++ b/Index.html
@@ -11,95 +11,67 @@
 
 <body>
         <div class="header">
-                <div class="header-right">
-                        <!-- <button><img class="btn-img btn-pop" src="img/icon_twitter.svg" alt="Twitter icon"></button> -->
-                        <button class="btn-pop" id="theme-toggle">
-                                <svg class="btn-img" width="15px" height="12px" viewBox="0 0 48 48"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <title>dark-mode</title>
-                                        <g id="Layer_2" data-name="Layer 2">
-                                                <g id="Icons">
-                                                        <g>
-                                                                <rect width="48" height="48" fill="none" />
-                                                                <g>
-                                                                        <path
-                                                                                d="M14,24A10,10,0,0,0,24,34V14A10,10,0,0,0,14,24Z" />
-                                                                        <path
-                                                                                d="M24,2A22,22,0,1,0,46,24,21.9,21.9,0,0,0,24,2ZM6,24A18.1,18.1,0,0,1,24,6v8a10,10,0,0,1,0,20v8A18.1,18.1,0,0,1,6,24Z" />
-                                                                </g>
-                                                        </g>
+                <button class="btn-pop" id="theme-toggle">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="2 0 48 48" height="95%">
+                                <g data-name="Layer 2">
+                                        <path fill="none" d="M0 0h48v48H0z" />
+                                        <path d="M14 24a10 10 0 0 0 10 10V14a10 10 0 0 0-10 10Z" />
+                                        <path
+                                                d="M24 2a22 22 0 1 0 22 22A21.9 21.9 0 0 0 24 2ZM6 24A18.1 18.1 0 0 1 24 6v8a10 10 0 0 1 0 20v8A18.1 18.1 0 0 1 6 24Z" />
+                                </g>
+                        </svg>
+
+                </button>
+                <button class="btn-pop">
+                        <a href="https://www.instagram.com/thejunglecan/" target="_">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="3 3 52 54" height="122%">
+                                        <circle cx="24" cy="24" r="20" fill="#C13584" />
+                                        <path fill="#fff"
+                                                d="M24 14.2h4.8c1.2 0 1.9.3 2.3.4.5.3 1 .5 1.4 1 .4.4.6.8.9 1.3.1.4.3 1 .4 2.3a83.3 83.3 0 0 1-.4 11.9c-.3.5-.5 1-1 1.4-.4.4-.8.6-1.3.9-.4.1-1 .3-2.3.4a83.3 83.3 0 0 1-11.9-.4c-.5-.3-1-.5-1.4-1-.4-.4-.6-.8-.9-1.3-.1-.4-.3-1-.4-2.3a83.3 83.3 0 0 1 .4-11.9c.3-.5.5-1 1-1.4.4-.4.8-.6 1.3-.9.4-.1 1-.3 2.3-.4H24Zm0-2.2h-5c-1.2.1-2.1.3-2.9.6-.7.3-1.4.7-2 1.4-.8.7-1.2 1.4-1.5 2.1-.3.8-.5 1.7-.5 3a85.1 85.1 0 0 0 .5 12.8c.3.7.7 1.4 1.4 2 .7.8 1.4 1.2 2.1 1.5.8.3 1.7.5 3 .5a85.1 85.1 0 0 0 12.8-.5c.7-.3 1.4-.7 2-1.4.8-.7 1.2-1.4 1.5-2.1.3-.8.5-1.7.5-3a85.1 85.1 0 0 0-.5-12.8c-.3-.7-.7-1.4-1.4-2-.7-.8-1.4-1.2-2.1-1.5-.8-.3-1.7-.5-3-.5L24 12Z" />
+                                        <path fill="#fff"
+                                                d="M24 17.8a6.2 6.2 0 1 0 0 12.4 6.2 6.2 0 0 0 0-12.4ZM24 28a4 4 0 1 1 0-8 4 4 0 0 1 0 8ZM31.9 17.6a1.4 1.4 0 1 1-3 0 1.4 1.4 0 0 1 3 0Z" />
+                                </svg>
+                        </a>
+                </button>
+                <button class="btn-pop">
+                        <a href="https://github.com/aberrator9/the-jungle-can" target="_">
+                                <svg aria-hidden="true"
+                                        class="octicon octicon-mark-github v-align-middle color-fg-default"
+                                        data-view-component="true" viewBox="0 0 16 16" height="88%">
+                                        <path
+                                                d="M8 0a8 8 0 0 1 8 8 8 8 0 0 1-5.5 7.6c-.3 0-.5-.2-.5-.4V13c0-.7-.2-1.2-.5-1.5 1.7-.2 3.6-.9 3.6-4 0-.8-.3-1.5-.8-2 0-.3.4-1 0-2.2 0 0-.8-.2-2.3.8a7.4 7.4 0 0 0-4 0c-1.5-1-2.2-.8-2.2-.8-.4 1.1-.1 2 0 2.1-.6.6-.9 1.3-.9 2.2 0 3 1.9 3.7 3.7 4-.3.1-.5.5-.6 1-.4.2-1.6.5-2.3-.7-.1-.2-.6-.8-1.2-.8-.7 0-.3.4 0 .5.3.2.7 1 .8 1.2.2.4.7 1.3 2.7 1v1.4c0 .2-.1.5-.5.4A8 8 0 0 1 0 8a8 8 0 0 1 8-8Z" />
+                                </svg>
+                        </a>
+                </button>
+                <button class="btn-pop" id="kofi"><a href="https://ko-fi.com" target="_">
+                                <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1"
+                                        viewBox="0 0 101 40" height="91%">
+                                        <defs>
+                                                <linearGradient id="linear-gradient" x1="9.6" x2="13.7" y1="-1715.8"
+                                                        y2="-1728.5" gradientTransform="matrix(1 0 0 -1 4.3 -1707.7)"
+                                                        gradientUnits="userSpaceOnUse">
+                                                        <stop offset="0" stop-color="#ff4ea3" />
+                                                        <stop offset="1" stop-color="#ff5e5b" />
+                                                </linearGradient>
+                                        </defs>
+                                        <circle cx="20.4" cy="20" r="19.7" fill="#00b9fe" />
+                                        <g id="Layer_1-2" data-name="Layer 1-2">
+                                                <g id="Layer_1-3" data-name="Layer 1-3">
+                                                        <path fill="#fff" stroke="#000" stroke-linecap="round"
+                                                                stroke-linejoin="round" stroke-width="1.1"
+                                                                d="M30.4 21.9a15.5 15.5 0 0 1-2.2.1v-7.2h1.5a3 3 0 0 1 2.5 1.2 3.6 3.6 0 0 1 .8 2.3 3.4 3.4 0 0 1-2.6 3.6Zm6.2-5a6.5 6.5 0 0 0-2.9-4.5 7.7 7.7 0 0 0-4.4-1.4h-22a1.3 1.3 0 0 0-1.1 1.2v.3s-.1 9.7.1 15a3.3 3.3 0 0 0 3.3 3.1s10.1 0 14.9-.1h.7c2.8-.7 3-3.3 3-4.7 5.5.2 9.4-3.7 8.4-8.9Z" />
+                                                        <path fill="#ff5e5b"
+                                                                d="M17 26.4c.3.1.4 0 .4 0s3.5-3.2 5.1-5.1c1.4-1.7 1.5-4.4-.9-5.5S17.2 17 17.2 17a4 4 0 0 0-5.5-.6l-.1.1c-1.2 1.3-.8 3.5.1 4.7a60.2 60.2 0 0 0 5.1 5Z" />
+                                                        <path fill="url(#linear-gradient)"
+                                                                d="M17.2 26.5a.4.4 0 0 0 .3-.1s3.5-3.2 5.1-5.1c1.4-1.7 1.5-4.4-.9-5.5S17.3 17 17.3 17a4 4 0 0 0-5.5-.6l-.1.1c-1.2 1.3-.8 3.5.1 4.7a62.6 62.6 0 0 0 5.2 5.1c0 .2.1.2.2.2Z" />
                                                 </g>
                                         </g>
+                                        <path d="M59.5 26.9a1 1 0 0 1 .1.5 1.6 1.6 0 0 1-.5 1.1 1.9 1.9 0 0 1-1.2.5l-.6-.1a2.2 2.2 0 0 1-.5-.4l-5.5-7.2-2.4 2.3v4a1.5 1.5 0 0 1-.4 1.1 1.6 1.6 0 0 1-1.2.4 1.4 1.4 0 0 1-1.5-1.5V13a1.6 1.6 0 0 1 .5-1.1 1.3 1.3 0 0 1 1.2-.4A1.4 1.4 0 0 1 49 13v6.9l8.1-7.9a1.6 1.6 0 0 1 1.2-.6 1.2 1.2 0 0 1 1 .5 1.8 1.8 0 0 1 .4 1 1.4 1.4 0 0 1-.5 1L53.7 19l5.6 7.4a.8.8 0 0 1 .2.5ZM73.6 26a6.7 6.7 0 0 1-2.5 2.5 7.3 7.3 0 0 1-7 0 6.7 6.7 0 0 1-2.5-2.5 7.7 7.7 0 0 1 0-7.2 6.7 6.7 0 0 1 2.5-2.5 7 7 0 0 1 6.9 0 7.5 7.5 0 0 1 2.5 2.5 6.4 6.4 0 0 1 .9 3.6 6 6 0 0 1-.8 3.6ZM71 20.1a4.3 4.3 0 0 0-1.4-1.6 3.9 3.9 0 0 0-3.9 0 4 4 0 0 0-1.4 1.5 4.2 4.2 0 0 0-.5 2.2 5.5 5.5 0 0 0 .5 2.2 4 4 0 0 0 1.4 1.5 3.7 3.7 0 0 0 3.8 0 4 4 0 0 0 1.4-1.5 5.5 5.5 0 0 0 .5-2.2 4 4 0 0 0-.4-2.1ZM77.1 22.4a1.2 1.2 0 0 1-.4-1.1 2.1 2.1 0 0 1 .4-1.1 1.5 1.5 0 0 1 1.1-.4h4.4a1.4 1.4 0 0 1 1.5 1.5 1.8 1.8 0 0 1-.4 1 1.5 1.5 0 0 1-1.1.4h-4.4a1.4 1.4 0 0 1-1.1-.3ZM92.3 13.5a1.4 1.4 0 0 0-.3 1.1v1.2h2.3a1.4 1.4 0 0 1 1.4 1.4 1.4 1.4 0 0 1-1.4 1.4H92v8.9a1.5 1.5 0 0 1-.4 1.1 1.6 1.6 0 0 1-2.2 0 1.5 1.5 0 0 1-.4-1.1v-8.9h-1.3a1.4 1.4 0 0 1-1.4-1.4 1.4 1.4 0 0 1 1.4-1.4h1.4v-1.2a4 4 0 0 1 1.3-3.1 5.2 5.2 0 0 1 3.7-1.2 3 3 0 0 1 1.6.4 1.2 1.2 0 0 1 .7 1.2 1.7 1.7 0 0 1-.3 1 1.3 1.3 0 0 1-.9.4h-.6l-1-.2a1.7 1.7 0 0 0-1.3.4Zm5.3.1a1 1 0 0 1-.3-1v-.5a1.2 1.2 0 0 1 .4-1 2.7 2.7 0 0 1 1.2-.3 2.4 2.4 0 0 1 1.2.3 1.3 1.3 0 0 1 .4 1v.5a1.3 1.3 0 0 1-.4 1 2.8 2.8 0 0 1-1.3.3 2.7 2.7 0 0 1-1.2-.3Zm2.3 15a1.2 1.2 0 0 1-1.1.4 1.4 1.4 0 0 1-1.5-1.5V17.1a1.5 1.5 0 0 1 .4-1.1 1.2 1.2 0 0 1 1.1-.4 1.4 1.4 0 0 1 1.5 1.5v10.4a1.2 1.2 0 0 1-.4 1.1Z"
+                                                class="cls-5" />
                                 </svg>
-                        </button>
-                        <button class="btn-pop"><a href="https://www.instagram.com/thejunglecan/" target="_">
-                                        <img class="btn-img" style="height: 30px;" src="img/icon_insta.svg"
-                                                alt="Instagram icon">
-                                </a></button>
 
-                        <button class="btn-pop"><a href="https://github.com/aberrator9/the-jungle-can" target="_"><svg
-                                                height="24" aria-hidden="true" viewBox="0 0 16 16" version="1.1"
-                                                width="32" data-view-component="true"
-                                                class="octicon octicon-mark-github v-align-middle color-fg-default">
-                                                <path
-                                                        d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z">
-                                                </path>
-                                        </svg></a></button>
-                        <button class="btn-pop" id="kofi"><a href="https://ko-fi.com" target="_"><svg height="24"
-                                                width="80" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
-                                                xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 101 40">
-                                                <defs>
-                                                        <style>
-                                                                .cls-1 {
-                                                                        fill: #00b9fe;
-                                                                }
-
-                                                                .cls-2 {
-                                                                        fill: #fff;
-                                                                        stroke: #000;
-                                                                        stroke-linecap: round;
-                                                                        stroke-linejoin: round;
-                                                                        stroke-width: 1.14px;
-                                                                }
-
-                                                                .cls-3 {
-                                                                        fill: #ff5e5b;
-                                                                }
-
-                                                                .cls-4 {
-                                                                        fill: url(#linear-gradient);
-                                                                }
-                                                        </style>
-                                                        <linearGradient id="linear-gradient" x1="9.55" y1="-1715.77"
-                                                                x2="13.7" y2="-1728.51"
-                                                                gradientTransform="matrix(1, 0, 0, -1, 4.26, -1707.68)"
-                                                                gradientUnits="userSpaceOnUse">
-                                                                <stop offset="0" stop-color="#ff4ea3" />
-                                                                <stop offset="1" stop-color="#ff5e5b" />
-                                                        </linearGradient>
-                                                </defs>
-                                                <title>Kofi_Logo_Blue</title>
-                                                <circle class="cls-1" cx="20.4" cy="20" r="19.7" />
-                                                <g id="Layer_1-2" data-name="Layer 1-2">
-                                                        <g id="Layer_1-3" data-name="Layer 1-3">
-                                                                <path class="cls-2"
-                                                                        d="M30.4,21.9a15.48,15.48,0,0,1-2.2.1V14.8h1.5A3,3,0,0,1,32.2,16a3.57,3.57,0,0,1,.8,2.3A3.35,3.35,0,0,1,30.4,21.9Zm6.2-5a6.55,6.55,0,0,0-2.9-4.5A7.67,7.67,0,0,0,29.3,11H7.3a1.28,1.28,0,0,0-1.1,1.2v.3s-.1,9.7.1,15a3.29,3.29,0,0,0,3.3,3.1s10.1,0,14.9-.1h.7c2.8-.7,3-3.3,3-4.7C33.7,26,37.6,22.1,36.6,16.9Z" />
-                                                                <path class="cls-3"
-                                                                        d="M17,26.4c.3.1.4,0,.4,0s3.5-3.2,5.1-5.1c1.4-1.7,1.5-4.4-.9-5.5S17.2,17,17.2,17a3.94,3.94,0,0,0-5.5-.6l-.1.1c-1.2,1.3-.8,3.5.1,4.7a60.17,60.17,0,0,0,5.1,5Z" />
-                                                                <path class="cls-4"
-                                                                        d="M17.2,26.5a.37.37,0,0,0,.3-.1s3.5-3.2,5.1-5.1c1.4-1.7,1.5-4.4-.9-5.5S17.3,17,17.3,17a3.94,3.94,0,0,0-5.5-.6l-.1.1c-1.2,1.3-.8,3.5.1,4.7A62.58,62.58,0,0,0,17,26.3C17,26.5,17.1,26.5,17.2,26.5Z" />
-                                                        </g>
-                                                </g>
-                                                <path class="cls-5"
-                                                        d="M59.5,26.9a1.09,1.09,0,0,1,.1.5,1.61,1.61,0,0,1-.5,1.1,1.85,1.85,0,0,1-1.2.5c-.2,0-.4-.1-.6-.1a2.18,2.18,0,0,1-.5-.4l-5.5-7.2-2.4,2.3v4a1.5,1.5,0,0,1-.4,1.1,1.59,1.59,0,0,1-1.2.4,1.38,1.38,0,0,1-1.5-1.5V13a1.61,1.61,0,0,1,.5-1.1,1.29,1.29,0,0,1,1.2-.4A1.38,1.38,0,0,1,49,13v6.9L57.1,12a1.56,1.56,0,0,1,1.2-.6,1.23,1.23,0,0,1,1,.5,1.78,1.78,0,0,1,.4,1,1.39,1.39,0,0,1-.5,1L53.7,19l5.6,7.4A.76.76,0,0,1,59.5,26.9Z" />
-                                                <path class="cls-5"
-                                                        d="M73.6,26a6.67,6.67,0,0,1-2.5,2.5,7.26,7.26,0,0,1-7,0A6.67,6.67,0,0,1,61.6,26a7.65,7.65,0,0,1,0-7.2,6.67,6.67,0,0,1,2.5-2.5,7.06,7.06,0,0,1,6.9,0,7.47,7.47,0,0,1,2.5,2.5,6.44,6.44,0,0,1,.9,3.6A5.94,5.94,0,0,1,73.6,26ZM71,20.1a4.28,4.28,0,0,0-1.4-1.6,3.88,3.88,0,0,0-3.9,0A4,4,0,0,0,64.3,20a4.19,4.19,0,0,0-.5,2.2,5.45,5.45,0,0,0,.5,2.2,4,4,0,0,0,1.4,1.5,3.7,3.7,0,0,0,3.8,0,4,4,0,0,0,1.4-1.5,5.45,5.45,0,0,0,.5-2.2,4,4,0,0,0-.4-2.1Z" />
-                                                <path class="cls-5"
-                                                        d="M77.1,22.4a1.19,1.19,0,0,1-.4-1.1,2.1,2.1,0,0,1,.4-1.1,1.5,1.5,0,0,1,1.1-.4h4.4a1.38,1.38,0,0,1,1.5,1.5,1.78,1.78,0,0,1-.4,1,1.5,1.5,0,0,1-1.1.4H78.2A1.43,1.43,0,0,1,77.1,22.4Z" />
-                                                <path class="cls-5"
-                                                        d="M92.3,13.5a1.43,1.43,0,0,0-.3,1.1v1.2h2.3a1.37,1.37,0,0,1,1.4,1.4,1.37,1.37,0,0,1-1.4,1.4H92v8.9a1.5,1.5,0,0,1-.4,1.1,1.57,1.57,0,0,1-2.2,0,1.5,1.5,0,0,1-.4-1.1V18.6H87.7a1.37,1.37,0,0,1-1.4-1.4,1.37,1.37,0,0,1,1.4-1.4h1.4V14.6a4,4,0,0,1,1.3-3.1,5.17,5.17,0,0,1,3.7-1.2,2.93,2.93,0,0,1,1.6.4,1.21,1.21,0,0,1,.7,1.2,1.69,1.69,0,0,1-.3,1,1.27,1.27,0,0,1-.9.4h-.6c-.3-.1-.7-.1-1-.2A1.7,1.7,0,0,0,92.3,13.5Zm5.3.1a1,1,0,0,1-.3-1v-.5a1.16,1.16,0,0,1,.4-1,2.66,2.66,0,0,1,1.2-.3,2.38,2.38,0,0,1,1.2.3,1.28,1.28,0,0,1,.4,1v.5a1.28,1.28,0,0,1-.4,1,2.77,2.77,0,0,1-1.3.3A2.66,2.66,0,0,1,97.6,13.6Zm2.3,15a1.19,1.19,0,0,1-1.1.4,1.38,1.38,0,0,1-1.5-1.5V17.1a1.5,1.5,0,0,1,.4-1.1,1.19,1.19,0,0,1,1.1-.4,1.38,1.38,0,0,1,1.5,1.5V27.5a1.19,1.19,0,0,1-.4,1.1Z" />
-                                        </svg></a></button>
-                </div>
+                        </a>
+                </button>
         </div>
 
         <div class="flex-wrapper">
